tests/error/nested_errors/reassign_capture_2.err
Error: Illegal assignment (at $FILE:11:8)
   | 
 9 |         if 3 > 2:
10 |             z = y
11 |         y = 2
   |         ^^^^^ Variable `y` may not be assigned to since `y` is captured
   |               from an outer scope
   | 
 6 |     y = x + 1
   |     - `y` defined here

Guppy compilation failed due to 1 previous error
